# truegrind

./: .env.example  .gitignore  4.13 5.56pm truegrind-deployment-handoff.md  README.md  api_server.py  bootstrap.py  grind_pipeline.py  main.py  modal_app.py  nixpacks.toml  pyproject.toml  r2_sync.py  roboflow_prep.py  start.sh  test_recommendation.py  truegrind-angle-detection-spec.md
docs/: true-grind-consolidated.md  true_grind_llm_coding_handoff.md  truegrind_full_context.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  themeStore.svelte.ts
frontend/src/lib/components/: BottomNav.svelte  BrewFeedbackForm.svelte  CameraViewfinder.svelte  GrindAnalysisResult.svelte  GrindSizeGuide.svelte  GrinderDial.svelte  NewEntryDialog.svelte  PageLayout.svelte  RecommendationResult.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/community/: +page.svelte
frontend/src/routes/journal/: +page.svelte
frontend/src/routes/profile/: +page.svelte
recommendation/: README.md  __init__.py  recommendation_engine.py  rules_filter.json  taste_parser.py
